# Space

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DataTypes.h  Game.cpp  Game.h  Space.cpp  Space.h  TextRenderer.cpp  TextRenderer.h  vcpkg.json
Components/: Component.h  ParticleEmitter.cpp  VectorRenderer.cpp
Nodes/: Node.cpp  Node.h  Spaceship.cpp  Spaceship.h
data/SOUND/: soundgroups.yaml
src/: DataTypes.cpp  DataTypes.h  Game.cpp  Game.h  KeyboardInputManager.cpp  KeyboardInputManager.h  Main.cpp  Profiler.cpp  Profiler.h  Registry.cpp  Registry.h  Renderer.cpp  Renderer.h  TextRenderer.cpp  TextRenderer.h
src/Components/: Component.cpp  Component.h  Editor.cpp  Editor.h  ParticleEmitter.cpp  ParticleEmitter.h  RigidBody.cpp  RigidBody.h  SoundPlayer.cpp  SoundPlayer.h  VectorRenderer.cpp  VectorRenderer.h
src/Interfaces/: IBox2DBody.cpp  IBox2DBody.h
src/Nodes/: Camera.cpp  Camera.h  Node.cpp  Node.h  SceneRoot.cpp  SceneRoot.h  Spaceship.cpp  Spaceship.h
src/Renderer/: Renderer.cpp
